Fix: Update index.html and style.css to solve layout issues

--- a/style.css
+++ b/style.css
@@ -186,3 +186,7 @@
     width: 1px;
   }
 }
+
+body{
+  background-color: red;
+}
